--- a/ProyectoJuegosAnimados/codes/css/formulario.css
+++ b/ProyectoJuegosAnimados/codes/css/formulario.css
@@ -10,6 +10,11 @@ html, body {
     background-attachment: fixed;
     cursor: url('/Imagenes/blancoPuntero.png'), auto;
 }
+body.dark-mode {
+    background-color: #121212;
+    color: #7c7c7c;
+}
+
 
 /* Estilo del encabezado */
 h1 {
@@ -97,4 +102,54 @@ h1 {
 .rectangulo:hover {
     transform: scale(1.1); /* Aumenta el tamaño al 110% */
     box-shadow: 0 0 20px 10px rgba(210, 0, 218, 0.8); /* Sombra blanca */
+}
+
+button {
+    background-color: #4CAF50; /* Color de fondo verde */
+    color: white; /* Texto blanco */
+    font-family: 'Futura Display', sans-serif; /* Usando la fuente Futura */
+    font-size: 20px; /* Tamaño de fuente */
+    padding: 15px 32px; /* Espaciado dentro del botón */
+    border: none; /* Sin bordes */
+    border-radius: 5px; /* Bordes redondeados */
+    cursor: pointer; /* Cambiar el puntero cuando se pasa el ratón */
+    transition: background-color 0.3s, transform 0.3s; /* Efecto de transición para el cambio de color y movimiento */
+    margin-top: 20px; /* Margen superior para separarlo del contenido superior */
+    width: 100%; /* Hacer que el botón ocupe todo el ancho del contenedor */
+    max-width: 300px; /* Limitar el ancho máximo del botón */
+    display: block; /* Para que el botón sea un bloque de nivel de bloque */
+    margin-left: auto; /* Centrar el botón */
+    margin-right: auto; /* Centrar el botón */
+}
+
+/* Efecto cuando el botón es hover (al pasar el ratón por encima) */
+button:hover {
+    background-color: #45a049; /* Cambia el color de fondo a un verde más oscuro */
+    transform: translateY(-3px); /* Eleva ligeramente el botón */
+}
+
+/* Estilo de cuando el botón está en foco (clicado) */
+button:focus {
+    outline: none; /* Eliminar el borde predeterminado al hacer clic */
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.5); /* Sombra alrededor del botón cuando está enfocado */
+}
+
+#volverInicio {
+    width: 150px;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 10px 20px;
+    background-color: #ff00fb;
+    color: white;
+    font-weight: bold;
+    border-radius: 4px;
+    cursor: url('/Imagenes/moradoAPuntero.png'), auto;
+    text-align: center;
+    position: fixed; /* Mantenerlo visible en la posición */
+    bottom: 20px; /* A 20px del fondo */
+    left: 50%; /* Centrar horizontalmente respecto al viewport */
+    transform: translateX(-50%); /* Ajustar para que quede centrado */
+}
+
+#volverInicio:hover {
+    background-color: #890074;
 }
